Parse mountpoint from process output